[gd_scene load_steps=2 format=3 uid="uid://c71om0knvcngh"]

[ext_resource type="Script" path="res://scripts/select_card.gd" id="1_6fmd7"]

[node name="SelectCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6fmd7")

[node name="SelectContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="SelectContainer"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="SelectContainer/Header"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="SelectContainer/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "Cancel"

[node name="CardContainer" type="FlowContainer" parent="SelectContainer"]
layout_mode = 2

[node name="ConfirmContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 2

[node name="ConfirmVbox" type="VBoxContainer" parent="ConfirmContainer"]
layout_mode = 2

[node name="ConfirmPrompt" type="Label" parent="ConfirmContainer/ConfirmVbox"]
layout_mode = 2
text = "Are you sure?"

[node name="YesNoContainer" type="HBoxContainer" parent="ConfirmContainer/ConfirmVbox"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="ConfirmContainer/ConfirmVbox/YesNoContainer"]
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="ConfirmContainer/ConfirmVbox/YesNoContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="SelectContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ConfirmContainer/ConfirmVbox/YesNoContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ConfirmContainer/ConfirmVbox/YesNoContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
